Apresentando Template literals

--- a/Petshop/clientes.html
+++ b/Petshop/clientes.html
@@ -49,22 +49,15 @@
         <th scope="col">Ações</th>
       </tr>
     </thead>
-    <tbody>
-      <tr>
-        <td>66809433023</td>
-        <td>Jairo</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>18875539081</td>
-        <td>Elena</td>
-      </tr>
+    <tbody data-conteudo-tabela>
+      
       
     </tbody>
   </table>
 
   <body>
 
+    <script src="cliente.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
