Exibindo os dados do cliente

--- a/Petshop/clientes.html
+++ b/Petshop/clientes.html
@@ -57,7 +57,9 @@
 
   <body>
 
-    <script src="cliente.js"></script>
+
+    <script src="api/cliente.js"></script>
+    <script src="listagem-cliente.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
