Evento no fomulário de edição

--- a/Petshop/edita-clientes.html
+++ b/Petshop/edita-clientes.html
@@ -59,7 +59,7 @@
 
   <body>
     <script src="./api/cliente.js"></script>
-    <script src="validaCpf.js></script>
+    <script src="validaCpf.js"></script>
     <script src="edita-cliente.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
