Evento no formulário de edição

--- a/Petshop/clientes.html
+++ b/Petshop/clientes.html
@@ -60,7 +60,7 @@
 
 
     <script src="api/cliente.js"></script>
-    <script src="cadastro-clientes.js"></script>
+    <!-- <script src="cadastro-clientes.js"></script> -->
     <script src="listagem-cliente.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
